# pvp-online-mathgame

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: Makefile  main.py  pyproject.toml
backend/proto/: hello.proto
backend/static/: index.html
backend/tashizan/: problem.py  server.py  web_server.py
backend/templates/: index.html
frontend/: .prettierignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  consts.ts  pb  setupProxy.js
frontend/src/Components/: index.ts
frontend/src/Pages/: PlayerEdit.tsx  Top.tsx  index.tsx  routes.ts
frontend/src/api/: client.ts
frontend/src/components/: AppContainer.tsx  Auth.tsx  GameAddition.css  GameAddition.tsx  GameContainer.tsx  GameResult.css  GameResult.tsx  GameWindow.tsx  PageLink.css  PageLink.tsx  PlayerScoreList.css  PlayerScoreList.tsx  Problems.tsx  Router.tsx  WSAPIContainer.tsx
frontend/src/containers/: App.tsx
frontend/src/contexts/: app.ts  index.ts  page.ts  (+1 more)
mathgame/: dualboot.py  game_server.py  message_channel.py  player.py  web_server.py  ws_handler.py
mathgame/game/: problem.py  server.py
mathgame/protobuf/: app_pb2.py  client_pb2.py  server_pb2.py
mathgame/web/: server.py  ws_connection.py  ws_handler.py
proto/: Dockerfile  Makefile
proto/js/: app_pb.d.ts  app_pb.js
proto/python/: app_pb2.py
proto/src/: app.proto
tashizan/: dualboot.py  game_server.py  message.py  pb  web_server.py
tashizan/pb/: hello_pb2.py
tests/: test_problem.py  test_tashizan.py
tests/game/: server_test.py  test_problem.py  test_server.py
(+30 files in other folders)
