[tool.poetry]
name = "tashizan"
version = "0.1.0"
description = ""
authors = ["masaki.arizuka <masaki.arizuka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
starlette = {extras = ["full"], version = "^0.13.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
